--- a/pom.xml
+++ b/pom.xml
@@ -98,13 +98,13 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>Mithun Technologies Releases Nexus Repository</name>
-	      <url>http://3.23.86.81:8081/repository/MYTRFR//</url>
+	      <url>http://3.23.86.81:8081/repository/MYTRFR/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>Mithun Technologies Snapshot Nexus Repository </name>
-	      <url>http://3.23.86.81:8081/repository/MYTRFR-Sanpshot//</url>
+	      <url>http://3.23.86.81:8081/repository/MYTRFR-Sanpshot/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
