--- a/pom.xml
+++ b/pom.xml
@@ -97,14 +97,14 @@
 	
 	    <repository>
 	      <id>nexus</id>
-	      <name>Mithun Technologies Releases Nexus Repository</name>
-	      <url>http://18.191.110.21:8081/repository/flipkart-release/</url>
+	      <name>MYTRFR Releases Nexus Repository</name>
+	      <url>http://18.191.110.21:8081/repository/MYTRFR/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
-	      <name>Mithun Technologies Snapshot Nexus Repository </name>
-	      <url>http://18.191.110.21:8081/repository/flipkart-snapshot/</url>
+	      <name>MYTRFR Snapshot Nexus Repository </name>
+	      <url>http://18.191.110.21:8081/repository/MYTRFR-Sanpshot/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
