--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<groupId>com.mt</groupId>
 	<artifactId>maven-web-application</artifactId>
 	<packaging>war</packaging>
-	<version>0.1.1-Release</version>
+	<version>0.1.1-Sanpshot</version>
 	
 	<name>dev - env</name>
 
